# calorie-content-of-burgers

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_12_14_1044-a22dd75f8225_add_new_data.py  2025_12_18_0318-0f39d99d6bd7_add_year_column_to_book.py
manual.txt/: pars_manual.txt
pars/: page.json  pars_data.py  vkusno_tochka_burger.json
src/: config.py  crud.py  database.py  logger.py  main.py  models.py  sevice.py
static/: front.html
