[project]
name = "sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.1",
    "asyncpg==0.30.0",
    "beautifulsoup4==4.13.5",
    "dotenv==0.9.9",
    "fastapi==0.119.1",
    "load-dotenv==0.1.0",
    "lxml==6.0.1",
    "psycopg2==2.9.10",
    "psycopg2-binary==2.9.10",
    "pydentic>=0.0.1.dev3",
    "python-dotenv==1.1.1",
    "sqlalchemy>=2.0.44",
    "uv==0.9.11",
    "uvicorn==0.38.0",
]
